@@ -1,3 +1,9 @@
+2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Get font as
+	argument rather than font name. All users updated.
+	(grub_gfxterm_set_window): Likewise.
+
 2012-12-10  Vladimir Testov  <vladimir.testov@rosalab.ru>
 
 	* util/grub-mkfont.c (argp_parser): Fix a typo which prevented --asce
